# commander

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
commander/: Cargo.toml
commander/src/lib/: mod.rs
commander/src/lib/parse/: commander_parse_error.rs  hyphenation_type.rs  mod.rs  parse_error.rs  parse_input.rs  parse_option_config.rs  parse_output.rs  value_usage.rs
commander/src/lib/parse/hyphenation_type/: mod.rs  test.rs
commander/src/lib/parse/parse_found/: mod.rs  test.rs
commander/src/lib/parse/parse_input/: mod.rs  test.rs
commander/src/lib/parse/parse_iterator/: mod.rs  test.rs
commander/src/lib/parse/parse_option_config/: mod.rs  test.rs
commander/src/lib/parse/parse_option_name/: mod.rs  test.rs
commander/src/lib/parse/parse_output/: mod.rs  test.rs
commander/src/lib/parse/test/: mod.rs
commander/src/lib/print/: mod.rs  test.rs
commander/src/lib/print/app_info/: mod.rs  test.rs
commander/src/lib/print/help_info/: mod.rs  test.rs
commander/src/lib/print/option_config/: mod.rs  test.rs
commander/src/lib/print/test/: mod.rs
examples/: Cargo.toml
examples/src/examples/: example-clap-main.rs  example-commander-main.rs
examples/src/examples/example-clap/app/: mod.rs
examples/src/examples/example-clap/app/clap_lib/: mod.rs
examples/src/examples/example-commander/app/: mod.rs
examples/src/examples/example-commander/app/constants/: mod.rs
examples/src/lib/: constants.rs  mod.rs  test.rs
examples/src/lib/constants/: mod.rs
examples/src/lib/test/: mod.rs
examples/tests/: integration_test.rs  output-tests.rs  standard-output-tests.rs
src/: args_lib.rs  clap_lib.rs  constants.rs  lib.rs  main-args-lib.rs  main-clap-lib.rs  main.rs
src/args_lib/: mod.rs
src/clap_lib/: mod.rs
src/constants/: mod.rs
src/examples/clap/app/: clap_lib.rs  constants.rs  mod.rs
src/examples/commander/: main.rs
src/examples/commander/app/: constants.rs  mod.rs
src/examples/example-clap/: main.rs
src/examples/example-clap/app/: clap_lib.rs  mod.rs
src/examples/example-clap/app/clap_lib/: mod.rs
src/examples/example-clap/app/constants/: mod.rs
src/examples/example-clap/app/test/: mod.rs
src/examples/example-commander/: main.rs
src/examples/example-commander/app/: mod.rs
src/examples/example-commander/app/test/: mod.rs
src/lib/: mod.rs
src/lib/parse/: mod.rs
src/lib/parse/test/: mod.rs
src/lib/print/: mod.rs
src/lib/print/test/: mod.rs
