[package]
name = "croftsoft-commander"
version = "0.1.0"
edition = "2021"
default-run = "commander"

# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "commander"
path = "src/lib.rs"

[[bin]]
name = "commander"
path = "src/main-clap-lib.rs"

[[bin]]
name = "commander-args-lib"
path = "src/main-args-lib.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
