[package]
name = "croftsoft-commander"
version = "0.1.0"
edition = "2021"
authors = ["David Wallace Croft <david@CroftSoft.com>"]

# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "commander"
path = "src/lib/mod.rs"

[[example]]
name = "example-clap"
path = "src/examples/example-clap/main.rs"

[[example]]
name = "example-commander"
path = "src/examples/example-commander/main.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
