[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
edition = "2021"
name = "croftsoft-commander"
rust-version = "1.80.0"
version = "0.2.0-SNAPSHOT"

# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "commander"
path = "src/lib/mod.rs"
