[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
edition = "2021"
name = "croftsoft-commander-examples"
rust-version = "1.56.1"
version = "0.1.2-SNAPSHOT"

# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
croftsoft-commander = { path = "../commander" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[example]]
name = "example-clap"
path = "src/examples/example-clap-main.rs"

[[example]]
name = "example-commander"
path = "src/examples/example-commander-main.rs"

[lib]
path = "src/lib/mod.rs"
