[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
edition = "2024"
name = "croftsoft-commander-examples"
rust-version = "1.85.0"
version = "0.2.0-SNAPSHOT"

# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
croftsoft-commander = { path = "../commander" }

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"

[[example]]
name = "example-clap"
path = "src/examples/example-clap-main.rs"

[[example]]
name = "example-commander"
path = "src/examples/example-commander-main.rs"

[lib]
path = "src/lib/mod.rs"
